--- a/public/app.html
+++ b/public/app.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yippee - Food Discovery & Menu Explorer</title>
-    <link rel="stylesheet" href="app-styles.css">
+    <link rel="stylesheet" href="./app-styles.css">
 </head>
 <body>
     <!-- Global Header -->
@@ -467,7 +467,7 @@
         </div>
     </div>
     
-    <script src="app.js"></script>
+    <script src="./app.js"></script>
 </body>
 </html>
 
